# ComfyUI-Texture-Simple

./: README.md  __init__.py  pyproject.toml
web/: visualization.js
web/html/: threeVisualizer.html
web/js/: threeVisualizer.js
web/style/: threeStyle.css
