[project]
name = "comfyui-texture-simple"
description = ""
version = "1.0.0"
license = "LICENSE"
dependencies = ["Pillow>=10.1.0"]

[project.urls]
Repository = "https://github.com/gokayfem/ComfyUI-Texture-Simple"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Texture-Simple"
Icon = ""
Models = [{location = "/checkpoints/model.safetensor", model_url = "https://example.com/model.zip"}]
